--- a/src/index.css
+++ b/src/index.css
@@ -97,6 +97,38 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.key, .bigkey {   
+  background-color: rgb(89, 89, 89);
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  font-size: 12px;
+  border-radius: 5px;
+  border: none;
+  margin: 0.15rem;
+}
+
+.key {
+  width: 32px;
+  height: 46px;
+}
+
+.bigkey {
+  width: 54px;
+  height: 46px;
+}
+
+.bigkey img {
+  width: 18px;
 }
 
 
