--- a/src/index.css
+++ b/src/index.css
@@ -160,7 +160,7 @@ input, input:disabled, input:focus {
   background-color: white;
   color: black;
   border: solid rgb(211,214,218) 2px;
-  outline: none; /* Removes built-in focus */
+  /* outline: none; /* Removes built-in focus */
 }
 
 .hdn-submit {
