--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+/*
+  COLOR THEME
+light gray - rgb(211, 214, 218)
+
+
+*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -107,11 +114,10 @@ h1 {
 }
 
 .key, .bigkey {   
-  background-color: rgb(89, 89, 89);
-  color: white;
+  background-color: rgb(211, 214, 218);
   font-family: Arial, Helvetica, sans-serif;
   text-transform: uppercase;
-  font-size: 12px;
+  font-weight: 700;
   border-radius: 5px;
   border: none;
   margin: 0.15rem;
@@ -119,12 +125,15 @@ h1 {
 
 .key {
   width: 32px;
-  height: 46px;
+  height: 52px;
+  
+  font-size: 16px;
 }
 
 .bigkey {
   width: 54px;
-  height: 46px;
+  height: 52px;
+  font-size: 12px;
 }
 
 .bigkey img {
@@ -148,8 +157,8 @@ form {
 
 
 input, input:disabled, input:focus {
-  height: 50px;
-  width: 50px;
+  height: 54px;
+  width: 54px;
   font-size: 32px;
   font-weight: 700;
   margin: 2px;
